--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web
+  name: frontend
   namespace: roboshop
   labels: # these labels are deployment labels
-    app: web
+    app: frontend
     project: roboshop
     tier: web
 spec:
   replicas: 1
   selector:
     matchLabels: # these labels are used to find the pods
-      app: web
+      app: frontend
       project: roboshop
       tier: web
   template:
     metadata:
       labels: # these labels are pod labels
-        app: web
+        app: frontend
         project: roboshop
         tier: web
     spec:
       containers:
-      - name: web
+      - name: frontend
         image:  "{{ .Values.deployment.imageURL }}:{{ .Values.deployment.imageVersion }}"
         imagePullPolicy: Always
         volumeMounts:
@@ -33,7 +33,7 @@ spec:
       volumes:
       - name: nginx-conf
         configMap:
-          name: web
+          name: frontend
           items:
             - key: nginx.conf
               path: nginx.conf
