--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web
+  name: frontend
   namespace: roboshop
 spec:
-  type: LoadBalancer
   selector:
-    app: web
+    app: frontend
     project: roboshop
     tier: web
   ports:
