--- a/helm/templates/tgb.yaml
+++ b/helm/templates/tgb.yaml
@@ -2,7 +2,7 @@ apiVersion: elbv2.k8s.aws/v1beta1
 kind: TargetGroupBinding
 metadata:
   name: frontend
-  namespace: roboshop
+  namespace: rnk-roboshop
 spec:
   serviceRef:
     name: frontend # route traffic to the awesome-service
